sandbox/output
StockProfit.cpp:58:15: error: use of undeclared identifier 'prices'; did you mean 'prices_'?
            + prices[i];
              ^~~~~~
              prices_
./StockProfit.hpp:28:17: note: 'prices_' declared here
    vector<int> prices_;
                ^
1 error generated.
make: *** [test] Error 1
